# qt6.8-src

cmake/: QtIRScript.cmake
coin/platform_configs/: cmake_platforms.yaml  cmake_platforms_qemu.yaml  cmake_platforms_qemu_qnx710.yaml  cmake_platforms_static_release.yaml  cmake_platforms_target_android.yaml  cmake_platforms_wasm.yaml  ios-tests.yaml  macos.yaml  nightly_qnx710_host_windows.yaml  nightly_ubuntu_22_04_xwayland.yaml  qt-creator.yaml  qtbase-new-compiler-testing.yaml  qtsaferenderer-runtime.yaml  qtsaferenderer.yaml  tqtc-android-automotive.yaml
coin/pre-provisioning/qtci-linux-RHEL-9.4-x86_64/: README_MANUAL_INSTALLATIONS
coin/provisioning/qtci-linux-Debian-11.6-aarch64/: 02-apt.sh
coin/provisioning/qtci-linux-RHEL-8.10-x86_64/: 04-install-packages.sh  90-install-ffmpeg.sh
coin/provisioning/qtci-linux-RHEL-8.8-x86_64/: 04-install-packages.sh  90-install-ffmpeg.sh
coin/provisioning/qtci-linux-RHEL-9.2-x86_64/: 04-install-packages.sh
coin/provisioning/qtci-linux-RHEL-9.4-x86_64/: 04-install-packages.sh
coin/provisioning/qtci-linux-SLES-15_SP5-x86_64/: 02-zypperpackages.sh  08-pythondev.sh
coin/provisioning/qtci-linux-Ubuntu-22.04-aarch64/: 02-apt.sh
coin/provisioning/qtci-linux-Ubuntu-22.04-x86_64/: 02-apt.sh
coin/provisioning/qtci-linux-Ubuntu-24.04-aarch64/: 02-apt.sh
coin/provisioning/qtci-linux-Ubuntu-24.04-x86_64/: 02-apt.sh
coin/provisioning/qtci-linux-openSUSE-15.3-x86_64/: 04-zypperpackages.sh
coin/provisioning/qtci-linux-openSUSE-15.4-x86_64/: 04-zypperpackages.sh
coin/provisioning/qtci-linux-openSUSE-15.5-x86_64/: 04-zypperpackages.sh  08-pythondev.sh
qt3d/: .cmake.conf  .tag  REUSE.toml  dependencies.yaml
qt5compat/: .cmake.conf  .tag  REUSE.toml  licenseRule.json
qtactiveqt/: .tag  REUSE.toml  licenseRule.json
qtactiveqt/tools/dumpcpp/: moc.cpp
qtbase/: configure.cmake
qtbase/cmake/: QtInternalTargets.cmake
qtcharts/: .tag  REUSE.toml  licenseRule.json
qtcharts/coin/: module_config.yaml
qtcoap/: .tag  REUSE.toml
qtconnectivity/: .cmake.conf  .tag  CMakeLists.txt  REUSE.toml  licenseRule.json
qtdatavis3d/: .tag  REUSE.toml  dependencies.yaml  licenseRule.json
qtdatavis3d/coin/: module_config.yaml
qtdoc/: .tag  REUSE.toml  dependencies.yaml  licenseRule.json
qtgraphs/: .tag  CMakeLists.txt  REUSE.toml  dependencies.yaml  licenseRule.json
qtgraphs/coin/: module_config.yaml
qtgrpc/: .cmake.conf  .tag  REUSE.toml  licenseRule.json  qt_attribution.json
qtgrpc/examples/grpc/clientguide/server/: CMakeLists.txt  main.cpp
qtgrpc/examples/grpc/vehicle/server/: CMakeLists.txt
qthttpserver/: .tag  REUSE.toml  dependencies.yaml  licenseRule.json
qtimageformats/: .tag  REUSE.toml  licenseRule.json
qtlanguageserver/: .tag  REUSE.toml  licenseRule.json
qtlocation/: .cmake.conf  .tag  REUSE.toml  dependencies.yaml  licenseRule.json
qtlottie/: .tag  REUSE.toml  licenseRule.json
qtlottie/coin/: module_config.yaml
qtmqtt/: .tag  REUSE.toml
qtnetworkauth/: .tag  REUSE.toml  licenseRule.json
qtopcua/: .tag  REUSE.toml  licenseRule.json
qtopcua/coin/: module_config.yaml
qtpositioning/: .tag  REUSE.toml  dependencies.yaml  licenseRule.json
qtquick3d/: .cmake.conf  .tag  REUSE.toml  dependencies.yaml  licenseRule.json
qtquick3dphysics/: .cmake.conf  .tag  REUSE.toml  dependencies.yaml  licenseRule.json
qtquick3dphysics/coin/: module_config.yaml
qtquickeffectmaker/: .cmake.conf  .tag  REUSE.toml  dependencies.yaml  licenseRule.json
qtquickeffectmaker/coin/: module_config.yaml
qtquicktimeline/: .tag  REUSE.toml  dependencies.yaml  licenseRule.json
qtremoteobjects/: .tag  REUSE.toml  licenseRule.json
qtscxml/: .tag  REUSE.toml  licenseRule.json
qtsensors/: .tag  REUSE.toml  licenseRule.json
qtserialbus/: .tag  REUSE.toml  dependencies.yaml  licenseRule.json
qtserialport/: .tag  REUSE.toml  licenseRule.json
qtspeech/: .tag  REUSE.toml  dependencies.yaml  licenseRule.json
qtsvg/: .tag
qtsvg/coin/: module_config.yaml
qtvirtualkeyboard/: .tag  REUSE.toml  dependencies.yaml  licenseRule.json
qtwayland/: .tag  REUSE.toml  dependencies.yaml  licenseRule.json
qtwayland/LICENSES/: HPND.txt
qtwayland/coin/: module_config.yaml
qtwebengine/: .cmake.conf  .tag  CHROMIUM_VERSION  REUSE.toml  dependencies.yaml  licenseRule.json
qtwebengine/cmake/: Functions.cmake
qtwebengine/coin/: module_config.yaml  qt-installer-package-config.json
qtwebengine/src/: CMakeLists.txt
qtwebview/: .tag  REUSE.toml  dependencies.yaml  licenseRule.json
qtwebview/coin/: module_config.yaml
(+593 files in other folders)
